src/main/java/com/landasource/wiidget/antlr/Wiidget.g4
/*
* LICENCE
*/

/** 
 * @author Zsolt Lengyel (zsolt.lengyel.it@gmail.com)
 */
grammar Wiidget;

// starting point for parsing a wiidget file
compilationUnit
    :   importDeclaration* statementDeclaration* EOF
    ;

importDeclaration
    :   IMPORT (innerImport | externalImport) ';'
    ;

innerImport
    : qualifiedName (AS Identifier)?
    ;

externalImport
    : StringLiteral AS Identifier // here alias is mandatory
    ;

statementDeclaration
    :   controlStatement
    |   wiidgetDeclaration
    |   wiidgetMethodCallExpression ';'
    |   seamStatement
    ;

controlStatement
    :   (ifControl | foreachControl) wiidgetBody (elseControl)?
    ;

ifControl
    : IF LPAREN expression RPAREN
    ;

foreachControl
    : FOREACH LPAREN foreachVariable ':' expression RPAREN
    ;

elseControl
    : ELSE wiidgetBody
    ;

foreachVariable
    : (Identifier ARROW)? Identifier
    ;      

wiidgetDeclaration
    :   wiidgetVariableBinding? unifiedWiidgetName wiidgetArguments? wiidgetBody
    ;

wiidgetVariableBinding
    :   wiidgetVariable COLON
    ;

wiidgetVariable
    : WiidgetVarSign Identifier
    ;

unifiedWiidgetName
    : expressionWiidgetName
    | Identifier
    | StringLiteral    
    ;

expressionWiidgetName:
    '`' expression '`'
    ;

wiidgetMethodCallExpression
    :   wiidgetVariable '.' Identifier LPAREN expressionList? RPAREN
    ;

seamStatement
    : SEAM LPAREN expression RPAREN wiidgetBody
    ;

wiidgetArguments
    : '(' ( elementValue | elementValuePairs )? ')'
    ;

elementValuePairs
    :   elementValuePair (',' elementValuePair)*
    ;

elementValuePair
    : attributeName ASSIGN elementValue
    ;

attributeName
    : Identifier
    | StringLiteral
    ;

elementValue
    :   expression
    |   qualifiedName    
    ;
    
mapExpression
    : '{' (mapEntry (',' mapEntry)*)? '}'
    ;

mapEntry
    :   mapKey ':' expression
    ;

mapKey
    : Identifier | StringLiteral      
    ;

listExpression
    : '[' (expression (',' expression)*)?  ']'
    ;

wiidgetBody
    :   ';'
    |   '{' statementDeclaration* '}'
    ;

// END OF WIIDGET RULES


qualifiedName
    :   Identifier ('.' Identifier)*
    ;
    
literal 
    :   IntegerLiteral
    |   FloatingPointLiteral
    |   CharacterLiteral
    |   StringLiteral
    |   BooleanLiteral
    |   NullLiteral
    ;

// EXPRESSIONS
expressionList
    :   expression (',' expression)*
    ;


expression
    :   primary
    |   wiidgetVariable
    |   wiidgetMethodCallExpression
    |   mapExpression
    |   listExpression
    |   expression DOT Identifier    
    |   expression LBRACK expression RBRACK
    |   expression DOT Identifier LPAREN expressionList? RPAREN        
    |   NegotionOperator expression
    |   expression MathematicalOperator expression
    |   expression CompareOperator expression
    |   expression EqualityOperator expression
    |   expression LogicalOperator expression  
    |   expression DEFAULT_OPERATOR expression
    |   expression QUESTION expression COLON expression   
    ;

primary
    : Identifier
    | literal
    | LPAREN expression RPAREN
    ;

LogicalOperator
    : ('&&' | '||') ;

MathematicalOperator
    : ('*'|'/'|'%'|'+'|'-');

NegotionOperator    
    : ('!');

CompareOperator
    : ('<=' | '>=' | '>' | '<');

EqualityOperator
    : ('==' | '!=') ;


// LEXER

// Keywords
IMPORT : 'import';
DEFAULT_OPERATOR : '~';
SEAM : 'seam';
WiidgetVarSign : '$' ;

IntegerLiteral
	:	DecimalIntegerLiteral
	|	HexIntegerLiteral
	|	OctalIntegerLiteral
	|	BinaryIntegerLiteral
	;

fragment
DecimalIntegerLiteral
	:	DecimalNumeral IntegerTypeSuffix?
	;

fragment
HexIntegerLiteral
	:	HexNumeral IntegerTypeSuffix?
	;

fragment
OctalIntegerLiteral
	:	OctalNumeral IntegerTypeSuffix?
	;

fragment
BinaryIntegerLiteral
	:	BinaryNumeral IntegerTypeSuffix?
	;

fragment
IntegerTypeSuffix
	:	[lL]
	;

fragment
DecimalNumeral
	:	'0'
	|	NonZeroDigit (Digits? | Underscores Digits)
	;

fragment
Digits
	:	Digit (DigitsAndUnderscores? Digit)?
	;

fragment
Digit
	:	'0'
	|	NonZeroDigit
	;

fragment
NonZeroDigit
	:	[1-9]
	;

fragment
DigitsAndUnderscores
	:	DigitOrUnderscore+
	;

fragment
DigitOrUnderscore
	:	Digit
	|	'_'
	;

fragment
Underscores
	:	'_'+
	;

fragment
HexNumeral
	:	'0' [xX] HexDigits
	;

fragment
HexDigits
	:	HexDigit (HexDigitsAndUnderscores? HexDigit)?
	;

fragment
HexDigit
	:	[0-9a-fA-F]
	;

fragment
HexDigitsAndUnderscores
	:	HexDigitOrUnderscore+
	;

fragment
HexDigitOrUnderscore
	:	HexDigit
	|	'_'
	;

fragment
OctalNumeral
	:	'0' Underscores? OctalDigits
	;

fragment
OctalDigits
	:	OctalDigit (OctalDigitsAndUnderscores? OctalDigit)?
	;

fragment
OctalDigit
	:	[0-7]
	;

fragment
OctalDigitsAndUnderscores
	:	OctalDigitOrUnderscore+
	;

fragment
OctalDigitOrUnderscore
	:	OctalDigit
	|	'_'
	;

fragment
BinaryNumeral
	:	'0' [bB] BinaryDigits
	;

fragment
BinaryDigits
	:	BinaryDigit (BinaryDigitsAndUnderscores? BinaryDigit)?
	;

fragment
BinaryDigit
	:	[01]
	;

fragment
BinaryDigitsAndUnderscores
	:	BinaryDigitOrUnderscore+
	;

fragment
BinaryDigitOrUnderscore
	:	BinaryDigit
	|	'_'
	;

// �3.10.2 Floating-Point Literals

FloatingPointLiteral
	:	DecimalFloatingPointLiteral
	|	HexadecimalFloatingPointLiteral
	;

fragment
DecimalFloatingPointLiteral
	:	Digits '.' Digits? ExponentPart? FloatTypeSuffix?
	|	'.' Digits ExponentPart? FloatTypeSuffix?
	|	Digits ExponentPart FloatTypeSuffix?
	|	Digits FloatTypeSuffix
	;

fragment
ExponentPart
	:	ExponentIndicator SignedInteger
	;

fragment
ExponentIndicator
	:	[eE]
	;

fragment
SignedInteger
	:	Sign? Digits
	;

fragment
Sign
	:	[+-]
	;

fragment
FloatTypeSuffix
	:	[fFdD]
	;

fragment
HexadecimalFloatingPointLiteral
	:	HexSignificand BinaryExponent FloatTypeSuffix?
	;

fragment
HexSignificand
	:	HexNumeral '.'?
	|	'0' [xX] HexDigits? '.' HexDigits
	;

fragment
BinaryExponent
	:	BinaryExponentIndicator SignedInteger
	;

fragment
BinaryExponentIndicator
	:	[pP]
	;

BooleanLiteral
	:	'true'
	|	'false'
	;

CharacterLiteral
	:	'\'' SingleCharacter '\''
	|	'\'' EscapeSequence '\''
	;

fragment
SingleCharacter
	:	~['\\]
	;

StringLiteral
	:	'"' StringCharacters? '"'
	;

fragment
StringCharacters
	:	StringCharacter+
	;

fragment
StringCharacter
	:	~["\\]
	|	EscapeSequence
	;

fragment
EscapeSequence
	:	'\\' [btnfr"'\\]
	|	OctalEscape
    |   UnicodeEscape
	;

fragment
OctalEscape
	:	'\\' OctalDigit
	|	'\\' OctalDigit OctalDigit
	|	'\\' ZeroToThree OctalDigit OctalDigit
	;

fragment
UnicodeEscape
    :   '\\' 'u' HexDigit HexDigit HexDigit HexDigit
    ;

fragment
ZeroToThree
	:	[0-3]
	;

NullLiteral
	:	'null'
	;

// CONTROLS
IF : 'if';
FOREACH : 'foreach';
ELSE : 'else';

// KEYWORDS
AS : 'as';

// Separators

LPAREN : '(';
RPAREN : ')';
LBRACE : '{';
RBRACE : '}';
LBRACK : '[';
RBRACK : ']';
SEMI : ';';
COMMA : ',';
DOT : '.';
ARROW : '->';

// Operators


GT : '>';
LT : '<';
BANG : '!';
TILDE : '~';
QUESTION : '?';
COLON : ':';
EQUAL : '==';
LE : '<=';
GE : '>=';
NOTEQUAL : '!=';
AND : '&&';
OR : '||';
INC : '++';
DEC : '--';
ADD : '+';
SUB : '-';
ASSIGN : '=';
MUL : '*';
DIV : '/';
BITAND : '&';
BITOR : '|';
CARET : '^';
MOD : '%';

ADD_ASSIGN : '+=';
SUB_ASSIGN : '-=';
MUL_ASSIGN : '*=';
DIV_ASSIGN : '/=';
AND_ASSIGN : '&=';
OR_ASSIGN : '|=';
XOR_ASSIGN : '^=';
MOD_ASSIGN : '%=';
LSHIFT_ASSIGN : '<<=';
RSHIFT_ASSIGN : '>>=';
URSHIFT_ASSIGN : '>>>=';

Identifier
	:	JavaLetter JavaLetterOrDigit*
	;

fragment
AttributeCharacter
    : [a-zA-Z0-9_]
    | '-'
    | ':'
    ;

fragment
JavaLetter
	:	[a-zA-Z_] // these are the "java letters" below 0xFF
	|	// covers all characters above 0xFF which are not a surrogate
		~[\u0000-\u00FF\uD800-\uDBFF]
		{Character.isJavaIdentifierStart(_input.LA(-1))}?
	|	// covers UTF-16 surrogate pairs encodings for U+10000 to U+10FFFF
		[\uD800-\uDBFF] [\uDC00-\uDFFF]
		{Character.isJavaIdentifierStart(Character.toCodePoint((char)_input.LA(-2), (char)_input.LA(-1)))}?
	;

fragment
JavaLetterOrDigit
	:	[a-zA-Z0-9$_] // these are the "java letters or digits" below 0xFF
	|	// covers all characters above 0xFF which are not a surrogate
		~[\u0000-\u00FF\uD800-\uDBFF]
		{Character.isJavaIdentifierPart(_input.LA(-1))}?
	|	// covers UTF-16 surrogate pairs encodings for U+10000 to U+10FFFF
		[\uD800-\uDBFF] [\uDC00-\uDFFF]
		{Character.isJavaIdentifierPart(Character.toCodePoint((char)_input.LA(-2), (char)_input.LA(-1)))}?
	;

//
// Whitespace and comments
//

WS  :  [ \t\r\n\u000C]+ -> skip
    ;

COMMENT
    :   '/*' .*? '*/' -> skip
    ;

LINE_COMMENT
    :   '//' ~[\r\n]* -> skip
    ;
